--- a/web/web/music/templates/home.html
+++ b/web/web/music/templates/home.html
@@ -1,1 +1,14 @@
 <h1>Welcome to Rum!</h1>
+
+{% if not user.is_authenticated %}
+<a id="browserid" href="#">Sign In</a>
+<form method="POST" action="{% url browserid_verify %}">
+   {% csrf_token %}
+   {{ browserid_form.as_p }}
+</form>
+{% else %}
+  <a href="{% url sign_out %}">Sign Out</a>
+{% endif %}
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"> </script>
+{{ browserid_form.media }}
