Adds foundation, correct templates, and general pretty.

--- a/web/web/main/templates/login_failed.html
+++ b/web/web/main/templates/login_failed.html
@@ -1,2 +1,6 @@
-<p>Sorry, your sign in was rejected because your email is not active.</p>
-<p>Please contact drink-rum@mit.edu to access.</p>
+{% extends 'base.html' %}
+
+{% block content %}
+  <p>Sorry, your sign in was rejected because your email is not active.</p>
+  <p>Please contact drink-rum@mit.edu to access.</p>
+{% endblock %}
