--- a/web/web/main/templates/home.html
+++ b/web/web/main/templates/home.html
@@ -1,14 +1,16 @@
-<h1>Welcome to Rum!</h1>
+{% extends 'base.html' %}
 
-{% if not user.is_authenticated %}
-<a id="browserid" href="#">Sign In</a>
-<form method="POST" action="{% url browserid_verify %}">
-   {% csrf_token %}
-   {{ browserid_form.as_p }}
-</form>
-{% else %}
-  <a href="{% url sign_out %}">Sign Out</a>
-{% endif %}
+{% block menu %}
+  <a id="menu-sign-out" class="alert radius button small" href="{% url logout %}">
+    Sign out
+  </a>
+  {% if user.is_staff %}
+    <a id="menu-admin" class="radius button small" href="{% url admin:index %}">
+      Admin
+    </a>
+  {% endif %}
+{% endblock %}
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"> </script>
-{{ browserid_form.media }}
+{% block content %}
+  <p>Nothing to see here...</p>
+{% endblock %}
