--- a/web/web/main/templates/base.html
+++ b/web/web/main/templates/base.html
@@ -29,6 +29,7 @@
       </div>
     </div>
     <script src="{% static 'js/foundation.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/require-jquery.js' %}" type="text/javascript"></script>
     {% block js %}{% endblock %}
   </body>
 </html>
