--- a/web/web/main/templates/main/login.html
+++ b/web/web/main/templates/main/login.html
@@ -1,11 +1,12 @@
-{% extends 'base.html' %}
+{% extends 'main/base.html' %}
 {% load staticfiles %}
 
 {% block content %}
-  <div id="sign-in" class="five columns centered">
+  <div id="sign-in" class="span2">
     {% if not user.is_authenticated %}
-      <button id="browserid" class="large button round">
-        sign in &raquo;
+      <button id="browserid" class="btn btn-large btn-info">
+        <i class="icon-arrow-right icon-white"></i>
+        sign in
       </button>
       <form method="POST" action="{% url browserid_verify %}">
          {% csrf_token %}
