--- a/web/web/main/templates/main/movies.html
+++ b/web/web/main/templates/main/movies.html
@@ -5,7 +5,7 @@ Movies:
 
 <ul>
 {% for m in movies %}
-  <li>{{ m.name }}</li>
+  <li><a href="{% url movie m.pk %}">{{ m.name }}</a></li>
 {% endfor %}
 </ul>
 
