Initial implementation of movie file downloading

--- a/web/web/main/templates/main/movie.html
+++ b/web/web/main/templates/main/movie.html
@@ -4,7 +4,7 @@
   <h1>{{ movie.name }}</h1>
   {% for file in files %}
     <hr />
-    <p>Download {{ file.filename }}</p>
+    <p><a href="{% url movie_download file.pk %}">Download {{ file.filename }}</a></p>
     <p>Last downloaded: {{ file.last_downloaded }}</p>
     <p>Downloaded: {{ file.times_downloaded }} times</p>
   {% endfor %}
